fix: inbox notification and change editor height

--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,27 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- <script
-      src="https://cdn.onesignal.com/sdks/OneSignalSDK.js"
-      async=""
-    ></script> -->
-
     <title>Talk.ink</title>
+    <meta name="title" content="Meta Tags — Preview, Edit and Generate" />
+    <meta name="description" content="Open Source Slack Alternative" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://talk.ink/" />
+    <meta property="og:title" content="Open Source Slack Alternative" />
+    <meta property="og:description" content="Open Source Slack Alternative" />
+    <meta property="og:image" content="https://talk.ink/assets/logo512.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://talk.ink/" />
+    <meta property="twitter:title" content="Open Source Slack Alternative" />
+    <meta
+      property="twitter:description"
+      content="Open Source Slack Alternative"
+    />
+    <meta
+      property="twitter:image"
+      content="https://talk.ink/assets/logo512.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
