chore: change meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -15,24 +15,39 @@
 
     <title>Talk.ink</title>
     <meta name="title" content="Meta Tags — Preview, Edit and Generate" />
-    <meta name="description" content="Open Source Slack Alternative" />
+    <meta
+      name="description"
+      content="Open source chat app, an alternative to Slack or Twist"
+    />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://talk.ink/" />
-    <meta property="og:title" content="Open Source Slack Alternative" />
-    <meta property="og:description" content="Open Source Slack Alternative" />
-    <meta property="og:image" content="https://talk.ink/assets/logo512.png" />
+    <meta
+      property="og:title"
+      content="Open source chat app, an alternative to Slack or Twist"
+    />
+    <meta
+      property="og:description"
+      content="Open source chat app, an alternative to Slack or Twist"
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/talk-ink/talk-ink/raw/main/public/images/talkink-homepage.png"
+    />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://talk.ink/" />
-    <meta property="twitter:title" content="Open Source Slack Alternative" />
+    <meta
+      property="twitter:title"
+      content="Open source chat app, an alternative to Slack or Twist"
+    />
     <meta
       property="twitter:description"
-      content="Open Source Slack Alternative"
+      content="Open source chat app, an alternative to Slack or Twist"
     />
     <meta
       property="twitter:image"
-      content="https://talk.ink/assets/logo512.png"
+      content="https://github.com/talk-ink/talk-ink/raw/main/public/images/talkink-homepage.png"
     />
   </head>
   <body>
